--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "HexagonProgress": "git://github.com/nk-o/HexagonProgress.git",
     "app-root-path": "^2.1.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^3.3.7",
     "bootstrap-sweetalert": "^1.0.1",
     "bootstrap-validator": "^0.11.9",
@@ -33,6 +34,7 @@
     "magnific-popup": "^1.1.0",
     "moment": "^2.21.0",
     "moment-timezone": "^0.5.14",
+    "mongoose": "^5.4.2",
     "object-fit-images": "^3.2.3",
     "social-likes": "^3.1.3"
   }
