--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "HexagonProgress": "git://github.com/nk-o/HexagonProgress.git",
     "app-root-path": "^2.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^3.3.7",
     "bootstrap-sweetalert": "^1.0.1",
